test/extern/ferguson/c-array/c-array-too-big.good
c-array-too-big.chpl:3: In function 'main':
c-array-too-big.chpl:3: error: c_array is too large
